fix: update link color in dark mode

--- a/src/tool-stack/index.module.scss
+++ b/src/tool-stack/index.module.scss
@@ -54,7 +54,7 @@
       rgba(255, 255, 255, 0),
       rgba(255, 255, 255, 0.03)
     );
-    --rs-tools-stack-url-color: #f93920;
+    --rs-tools-stack-url-color: #ff704d;
   }
 }
 
